# Tongyi-Agent

./: .env  .gitignore  AGENTS.md  AGENT_LIGHTNING_GUIDE.md  CLI_FIX_SUMMARY.md  CLI_GUIDE.md  COMPLETION_SUMMARY.md  FINAL_RELEASE_SUMMARY.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  MODEL_MANAGEMENT_GUIDE.md  OPENROUTER_INTEGRATION_SUMMARY.md  PLAN.md  PROJECT_STATUS.md  PUBLIC_RELEASE_GUIDE.md  README.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  SKILL_SPECIFICATION.md  SUBTLE_BUG_FIXES_SUMMARY.md  SUB_AGENT_TEAM.md  TASK_COORDINATOR_PROMPT.md  TODO_TRACKER.md  TONGYI_DEEPRESEARCH_SKILL_SUMMARY.md  TONGYI_SKILL_INDEX.md  config.py  config_validator.py  debug-prompt.txt  debug_claude_sdk.py  debug_claude_simple.py  error_log.md  eval_runner.py  models.ini  pyproject.toml  requirements.txt  run_remaining_tests.py  setup.py  test_claude_refactor.py  test_final_verification.py  (+5 more)
.claude/: settings.local.json
docs/: model-routing.md
examples/: agent_lightning_example.py
schemas/: artifact_blob.schema.json  drift_tick.schema.json  evidence.schema.json  load_report.schema.json  paper_meta.schema.json
src/: adaptive_planner.py  cas_store.py  claude_agent_orchestrator.py  code_search.py  csv_utils.py  data_iterator.py  delegation_clients.py  delegation_policy.py  drift_monitor.py  file_read.py  load_test.py  md_utils.py  model_manager.py  optimized_claude_agent.py  optimized_tongyi_agent.py  orchestrator_local.py  pdf_tools.py  react_parser.py  sandbox_exec.py  scholar_adapter.py  symbol_index.py  tongyi_orchestrator.py  tool_registry.py  training_manager.py  verifier_gate.py
src/tongyi_agent/: __init__.py  cli.py
src/tongyi_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_delegation_policy.py  test_eval_harness.py  test_integration.py  test_model_router.py  test_orchestrator_local.py  test_orchestrator_sandbox.py  test_orchestrator_verification.py  test_react_parser_and_iterator.py  test_sandbox_exec.py  test_sandbox_mounts.py  test_scholar_adapter.py  test_security_fixes.py  test_snippet_hygiene.py  test_symbol_index.py  test_tongyi_orchestrator.py  test_verifier_gate.py
tests/fixtures/: repo_qa.jsonl
tongyi_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/: base_tool.py
